# proc-c-hw

./: CMakeLists.txt  container.h  main.c  plane.c  plane.h  rnd.h  ship.c  ship.h  test_generation.c  test_generation.h  train.c  train.h  transport.c  transport.h
code/: CMakeLists.txt  container.c  container.h  file_read.c  file_read.h  main.c  plane.c  plane.h  rnd.c  rnd.h  ship.c  ship.h  test_generation.c  test_generation.h  timer.c  timer.h  train.c  train.h  transport.c  transport.h
test_input/correct/: test1.txt  test10.txt  test4.txt  test6.txt
test_input/error/: test1.txt  test3.txt
test_output/: out1.txt  out2.txt  out3.txt
